--- a/index.html
+++ b/index.html
@@ -460,13 +460,13 @@
           </span>
           <br />
           <span class="text-white">
-            with scalable, robust, and innovative technology solutions
+            with scalable and innovative <br>technology solutions
           </span>
         </h1>
 
         <!-- Subtext -->
         <p class="text-xl text-neutral-300 max-w-3xl mb-8 animate__animated animate__fadeIn animate__delay-1s">
-          Our team of experienced engineers from Uber, Atlassian, and top tech companies delivers high-impact results.
+          Our team of experienced engineers from Uber, Atlassian, Goldman Sachs, Visa and top tech companies delivers high-impact results.
         </p>
 
         <!-- CTA Buttons -->
@@ -497,14 +497,14 @@
     }
   </style>
 
-  <script>
+  <!-- <script>
     // Parallax effect on scroll
     window.addEventListener('scroll', () => {
       const scrolled = window.pageYOffset;
       const hero = document.querySelector('#hero');
       hero.style.transform = `translateY(${scrolled * 0.5}px)`;
     });
-  </script>
+  </script> -->
 </div>
 </htmlCode></element><element id="da547dc8-ba0b-405b-b0b1-cff29bf54d2b" data-section-id="da547dc8-ba0b-405b-b0b1-cff29bf54d2b">
 
