--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
         <!-- Subtext -->
         <p class="text-xl text-neutral-300 max-w-3xl mb-8 animate__animated animate__fadeIn animate__delay-1s">
-          Our team of experienced engineers from Uber, Atlassian, Goldman Sachs, Visa and top tech companies delivers high-impact results.
+          Our team of experienced engineers from Uber, Visa, Atlassian, Goldman Sachs, Sprinklr, Wells Fargo and other top tech companies delivers high-impact results.
         </p>
 
         <!-- CTA Buttons -->
@@ -610,7 +610,7 @@
         <div class="lg:pl-12 animate__animated animate__fadeInRight">
           <!-- Using an illustration from metadata -->
           <img 
-            src="https://framerusercontent.com/images/8pDIfAavKxjrfBJIAIOQCQe8eZU.png"
+            src="./Product Iteration.svg"
             alt="Building Products Illustration"
             class="w-full h-auto rounded-lg shadow-2xl shadow-indigo-500/20 transform hover:scale-105 transition-transform duration-300"
           />
@@ -681,9 +681,9 @@
       <!-- "But It Doesn't Have to Be" Section -->
       <div class="text-center mb-16 animate__animated animate__fadeIn">
         <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">
-          But It Doesn't Have to
+            What if you
           <span class="bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-purple-500">
-            Be
+            could
           </span>
         </h2>
       </div>
