--- a/index.html
+++ b/index.html
@@ -1164,12 +1164,12 @@
           <div class="space-y-6">
             <div class="flex items-center space-x-4">
               <div class="w-12 h-12 bg-neutral-700 rounded-full flex items-center justify-center">
-              <a href="#" class="text-neutral-400 hover:text-indigo-500 transition-colors">
+              <a href="" target="_blank" class="text-neutral-400 hover:text-indigo-500 transition-colors">
                 <svg class="w-6 h-6 text-indigo-500" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
 </a>
               </div>
               <div class="w-12 h-12 bg-neutral-700 rounded-full flex items-center justify-center">
-                <a href="#" class="text-neutral-400 hover:text-indigo-500 transition-colors">
+                <a href="https://x.com/tesseractlive" target="_blank" class="text-neutral-400 hover:text-indigo-500 transition-colors">
                   <svg class="w-6 h-6 text-indigo-500" fill="currentColor" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg>
                 </a>
                 </div>
@@ -1182,7 +1182,7 @@
               </div>
               <div>
                 <h3 class="text-white font-semibold">Email Us</h3>
-                <p class="text-neutral-400">contact@tesseract.tech</p>
+                <p class="text-neutral-400">business.tesseractgroup@gmail.com</p>
               </div>
             </div>
  
@@ -1195,7 +1195,8 @@
               </div>
               <div>
                 <h3 class="text-white font-semibold">Location</h3>
-                <p class="text-neutral-400">San Francisco, CA</p>
+                <p class="text-neutral-400">Dubai</p>
+                <p class="text-neutral-400">Bangalore</p>
               </div>
             </div>
           </div>
@@ -1203,31 +1204,13 @@
  
         <!-- Contact Form -->
         <div class="bg-neutral-900 p-8 rounded-xl border border-neutral-700 animate__animated animate__fadeInRight">
-          <form class="space-y-6">
-            <div>
-              <label class="block text-sm font-medium text-neutral-300 mb-2">Name</label>
-              <input type="text" class="w-full px-4 py-3 bg-neutral-800 border border-neutral-700 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-white" placeholder="Your name">
-            </div>
- 
-            <div>
-              <label class="block text-sm font-medium text-neutral-300 mb-2">Email</label>
-              <input type="email" class="w-full px-4 py-3 bg-neutral-800 border border-neutral-700 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-white" placeholder="your@email.com">
-            </div>
- 
-            <div>
-              <label class="block text-sm font-medium text-neutral-300 mb-2">Company</label>
-              <input type="text" class="w-full px-4 py-3 bg-neutral-800 border border-neutral-700 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-white" placeholder="Your company">
-            </div>
- 
-            <div>
-              <label class="block text-sm font-medium text-neutral-300 mb-2">Message</label>
-              <textarea rows="4" class="w-full px-4 py-3 bg-neutral-800 border border-neutral-700 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent text-white" placeholder="Tell us about your project"></textarea>
-            </div>
- 
-            <button type="submit" class="w-full py-3 px-6 bg-indigo-600 hover:bg-indigo-700 text-white font-medium rounded-lg transition-colors duration-200 transform hover:scale-105">
-              Send Message
-            </button>
-          </form>
+
+          <a href="https://forms.gle/KhgjLAGKZTV7FUaD8" target="_blank">
+            <button class="w-full py-3 px-6 bg-indigo-600 hover:bg-indigo-700 text-white font-medium rounded-lg transition-colors duration-200 transform hover:scale-105">
+                Raise any Query
+              </button>
+            </a>
+
         </div>
       </div>
     </div>
@@ -1298,7 +1281,7 @@
         </div>
  
         <!-- Services -->
-        <div>
+        <!-- <div>
           <h3 class="text-white font-semibold mb-6">Services</h3>
           <ul class="space-y-4">
             <li><a href="#" class="text-neutral-400 hover:text-indigo-500 transition-colors">Web Development</a></li>
@@ -1306,7 +1289,7 @@
             <li><a href="#" class="text-neutral-400 hover:text-indigo-500 transition-colors">UI/UX Design</a></li>
             <li><a href="#" class="text-neutral-400 hover:text-indigo-500 transition-colors">Cloud Solutions</a></li>
           </ul>
-        </div>
+        </div> -->
  
         <!-- Contact -->
         <div>
@@ -1331,11 +1314,11 @@
           <p class="text-neutral-400 text-sm">
             © 2024 Tesseract. All rights reserved.
           </p>
-          <div class="flex space-x-6 mt-4 md:mt-0">
+          <!-- <div class="flex space-x-6 mt-4 md:mt-0">
             <a href="#" class="text-sm text-neutral-400 hover:text-indigo-500 transition-colors">Privacy Policy</a>
             <a href="#" class="text-sm text-neutral-400 hover:text-indigo-500 transition-colors">Terms of Service</a>
             <a href="#" class="text-sm text-neutral-400 hover:text-indigo-500 transition-colors">Cookie Policy</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
