--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold text-white mb-2">Performance</h3>
-          <p class="text-neutral-400">Maintaining high performance while scaling your product can be challenging.</p>
+          <p class="text-neutral-400">Maintain high performance ensuring a smooth user experience while scaling your product.</p>
         </div>
  
         <div class="bg-neutral-800/50 p-6 rounded-lg border border-neutral-700 hover:border-indigo-500 transition-colors duration-300">
@@ -675,7 +675,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold text-white mb-2">Time to Market</h3>
-          <p class="text-neutral-400">Launching features quickly while maintaining quality is a delicate balance.</p>
+          <p class="text-neutral-400">Launch features quickly while maintaining quality.</p>
         </div>
  
         <div class="bg-neutral-800/50 p-6 rounded-lg border border-neutral-700 hover:border-indigo-500 transition-colors duration-300">
@@ -685,7 +685,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-semibold text-white mb-2">Scalability</h3>
-          <p class="text-neutral-400">Growing your infrastructure with your user base requires careful planning.</p>
+          <p class="text-neutral-400">Grow your infrastructure with your user base while having full control on costs</p>
         </div>
       </div>
       <!-- "That's Where We Come In" Section -->
