--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
             content: " (" attr(href) ")";
           }
         }
+        
       </style>
  
       <!-- Enhanced Image Handler -->
@@ -895,102 +896,146 @@
 <htmlCode>
 <div id="root">
   <section id="casestudies" class="py-20 bg-neutral-800">
-    
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center mb-16 animate__animated animate__fadeIn">
         <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">Case Studies</h2>
         <p class="text-xl text-neutral-400">Real solutions, real impact</p>
       </div>
- 
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Case Study Card 1 -->
-        <div class="case-study-card group cursor-pointer animate__animated animate__fadeIn">
-          <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
-            <img src="https://framerusercontent.com/images/ciNJJtSvl7dQARsQ16TAdIgNM.png" alt="AWS Cost Reduction" class="w-full h-48 object-cover" />
-            <div class="p-6">
-              <h3 class="text-xl font-bold text-white mb-3">AWS Infrastructure Cost Optimization</h3>
-              <p class="text-neutral-400 mb-4">How we saved more than 42% on AWS infrastructure costs</p>
-              <div class="flex flex-wrap gap-2 mb-4">
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">AWS</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Cost Optimization</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Cloud Architecture</span>
+      <div class="swiper-container">
+      <!-- Swiper Carousel -->
+      <div class="swiper flex flex-col">
+        <div class="swiper-wrapper mx-12">
+          <!-- Case Study Card 1 -->
+          <div class="swiper-slide">
+            <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
+              <img src="https://framerusercontent.com/images/ciNJJtSvl7dQARsQ16TAdIgNM.png" alt="AWS Cost Reduction" class="w-full h-48 object-cover" />
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-white mb-3">AWS Infrastructure Cost Optimization</h3>
+                <p class="text-neutral-400 mb-4">How we saved more than 42% on AWS infrastructure costs</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">AWS</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Cost Optimization</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Cloud Architecture</span>
+                </div>
+                <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
+                  <span class="mr-2">View Case Study</span>
+                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                  </svg>
+                </div>
               </div>
-              <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
-                <span class="mr-2">View Case Study</span>
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                </svg>
+            </div>
+          </div>
+  
+          <!-- Repeat similar cards for other case studies -->
+  
+          <!-- Case Study Card 2 -->
+          <div class="swiper-slide">
+            <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
+              <img src="https://framerusercontent.com/images/mr8PZCgAqUyxVjza4UqfYxz1es.webp" alt="Heroku to AWS Migration" class="w-full h-48 object-cover" />
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-white mb-3">Heroku to AWS Migration</h3>
+                <p class="text-neutral-400 mb-4">Seamless platform migration with 3x performance improvement</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">AWS</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Performance</span>
+                </div>
+                <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
+                  <span class="mr-2">View Case Study</span>
+                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Case Study Card 2 -->
+          <div class="swiper-slide">
+            <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
+              <img src="https://framerusercontent.com/images/WVpXfkn57hTRl1fDq4yxJgswXw.webp" alt="Database Migration" class="w-full h-48 object-cover" />
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-white mb-3">Zero Downtime Schema Migration</h3>
+                <p class="text-neutral-400 mb-4">Handling 400M+ row database migrations with zero downtime</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Database</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Zero Downtime</span>
+                </div>
+                <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
+                  <span class="mr-2">View Case Study</span>
+                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Case Study Card 2 -->
+          <div class="swiper-slide">
+            <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
+              <img src="https://framerusercontent.com/images/mr8PZCgAqUyxVjza4UqfYxz1es.webp" alt="Heroku to AWS Migration" class="w-full h-48 object-cover" />
+              <div class="p-6">
+                <h3 class="text-xl font-bold text-white mb-3">Heroku to AWS Migration</h3>
+                <p class="text-neutral-400 mb-4">Seamless platform migration with 3x performance improvement</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">AWS</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
+                  <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Performance</span>
+                </div>
+                <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
+                  <span class="mr-2">View Case Study</span>
+                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
         </div>
- 
-        <!-- Case Study Card 2 -->
-        <div class="case-study-card group cursor-pointer animate__animated animate__fadeIn">
-          <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
-            <img src="https://framerusercontent.com/images/mr8PZCgAqUyxVjza4UqfYxz1es.webp" alt="Heroku to AWS Migration" class="w-full h-48 object-cover" />
-            <div class="p-6">
-              <h3 class="text-xl font-bold text-white mb-3">Heroku to AWS Migration</h3>
-              <p class="text-neutral-400 mb-4">Seamless platform migration with 3x performance improvement</p>
-              <div class="flex flex-wrap gap-2 mb-4">
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">AWS</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Performance</span>
-              </div>
-              <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
-                <span class="mr-2">View Case Study</span>
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                </svg>
-              </div>
-            </div>
-          </div>
+  
+        <!-- Navigation buttons -->
+        <div class="swiper-navigation flex justify-center space-x-4 mt-4">
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
- 
-        <!-- Case Study Card 3 -->
-        <div class="case-study-card group cursor-pointer animate__animated animate__fadeIn">
-          <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
-            <img src="https://framerusercontent.com/images/WVpXfkn57hTRl1fDq4yxJgswXw.webp" alt="Database Migration" class="w-full h-48 object-cover" />
-            <div class="p-6">
-              <h3 class="text-xl font-bold text-white mb-3">Zero Downtime Schema Migration</h3>
-              <p class="text-neutral-400 mb-4">Handling 400M+ row database migrations with zero downtime</p>
-              <div class="flex flex-wrap gap-2 mb-4">
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Database</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Zero Downtime</span>
-              </div>
-              <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
-                <span class="mr-2">View Case Study</span>
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                </svg>
-              </div>
-            </div>
-          </div>
-        </div>
-         <div class="case-study-card group cursor-pointer animate__animated animate__fadeIn">
-          <div class="bg-neutral-900 rounded-xl overflow-hidden border border-neutral-700 hover:border-indigo-500 transition-all duration-300 transform hover:-translate-y-2">
-            <img src="https://framerusercontent.com/images/WVpXfkn57hTRl1fDq4yxJgswXw.webp" alt="Database Migration" class="w-full h-48 object-cover" />
-            <div class="p-6">
-              <h3 class="text-xl font-bold text-white mb-3">Zero Downtime Schema Migration</h3>
-              <p class="text-neutral-400 mb-4">Handling 400M+ row database migrations with zero downtime</p>
-              <div class="flex flex-wrap gap-2 mb-4">
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Database</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Migration</span>
-                <span class="px-3 py-1 text-sm bg-neutral-800 text-neutral-300 rounded-full">Zero Downtime</span>
-              </div>
-              <div class="flex items-center mt-4 text-indigo-500 group-hover:text-indigo-400 transition-colors">
-                <span class="mr-2">View Case Study</span>
-                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-                </svg>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </section>
+  
+  <!-- Include Swiper.js -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  
+  <script>
+
+    const swiper = new Swiper('.swiper', {
+      slidesPerView: 1,
+      spaceBetween: 16,
+      breakpoints: {
+        640: {
+          slidesPerView: 1,
+          spaceBetween: 16,
+        },
+        768: {
+          slidesPerView: 2,
+          spaceBetween: 24,
+        },
+        1024: {
+          slidesPerView: 3,
+          spaceBetween: 32,
+        },
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      centeredSlidesBounds:true
+    });
+
+  </script>
+ 
  
   <script>
     // Case study card click handler
